created base HTML framework

--- a/index.html
+++ b/index.html
@@ -5,11 +5,52 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="assets/css/style.css">
-    <title>Keith Tatad's Portfolio</title>
+        <link rel="icon" type="image/jpg" href="https://images.cdn3.stockunlimited.net/clipart/hash-symbol_1870469.jpg">
+        <title>#KeithTatad{}</title>
     </head>
 
     <body>
-    
+        <figure>
+        <img src="assets/images/KTProfilePic.jpg" alt="Keith Tatad" width="150px" height="200px">
+        </figure>
+        <div main class="home">
+            <header class="header-container">
+                <h1>Hi, I'm Keith Tatad</h1>
+                <nav class ="header-nav">
+                    <ul>
+                        <li>
+                            <a href="#me{}">#me{}</a>
+                        </li>
+                        <li>
+                            <a href="#work{}">#work{}</a>
+                        </li>
+                        <li>
+                            <a href="#contact{}">#contact{}</a>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
+            <main>
+                <div id="#me{}">
+                    <h2>#me{}</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus blanditiis animi quidem eos inventore ipsum beatae earum dolorum at delectus.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium neque, a non minus libero doloribus eos repellendus laboriosam saepe laudantium magni similique, ex nihil soluta reprehenderit, at aut consectetur iste.</p>
+                </div>
+                <div id="#work{}">
+                    <h2>#work{}</h2>
+                    <a href="https://ktatad.github.io/01-HTML-Git-CSS-Homework/">
+                        <img src="assets/images/01-html-css-git-homework-demo.png" alt="Horiseon Website" width="150px" height="200px">
+                    </a>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, quidem. At nisi eveniet ipsam rerum deserunt unde quod quos quaerat!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, aut laudantium et exercitationem cum rerum, nihil expedita eius, nam obcaecati ex delectus. Debitis inventore quisquam tempora natus nam sequi dolores!</p>
+                </div>
+                <div id="#contact{}">
+                    <h2>#contact{}</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta fuga doloremque praesentium itaque sequi cum architecto obcaecati eaque nobis atque!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet aut incidunt, consequatur ratione corporis fugit quisquam sunt excepturi quidem voluptatem rem culpa recusandae ipsam provident minima architecto dolor soluta accusantium?</p>
+                </div>
+            </main>
+        </div>
     </body>
 
 </html>
